--- a/src/shared/ui/button/styles.module.scss
+++ b/src/shared/ui/button/styles.module.scss
@@ -24,9 +24,9 @@ $button-primary-r: 16px;
   color: $button-primary-text;
 }
 
-.primary:active,
-.primary:focus,
-.primary:hover {
+.primary:hover:not(:disabled),
+.primary:focus:not(:disabled),
+.primary:active:not(:disabled) {
   background: $button-primary-active;
 }
 
@@ -38,9 +38,16 @@ $button-primary-r: 16px;
   border: 1px solid rgba(255, 255, 255, 0.25);
 }
 
-.secondary:hover,
-.secondary:focus,
-.secondary:active {
+.secondary:hover:not(:disabled),
+.secondary:focus:not(:disabled),
+.secondary:active:not(:disabled) {
   border-color: rgba(255, 255, 255, 0.45);
   background: rgba(255, 255, 255, 0.05);
+}
+
+/* -------- disabled -------- */
+
+.button:disabled {
+  opacity: 0.7;
+  cursor: not-allowed;
 }
